--- a/src/main/webapp/WEB-INF/content/system/url/mockResp.html
+++ b/src/main/webapp/WEB-INF/content/system/url/mockResp.html
@@ -326,7 +326,9 @@
 <script type="text/javascript" src="../static/js/mock/tab.js" th:href="@{/static/system/js/mock/tab.js}"></script>
 
 <script type="text/javascript">
-
+$(window).load( function(){	
+	methodList();
+} );
 </script>
 </body>
 </html>
